--- a/pom.xml
+++ b/pom.xml
@@ -37,15 +37,6 @@
 		</dependency>
 
 
-
-
-
-
-
-
-
-
-
 		<!--Swagger-->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -58,7 +49,32 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<!--mybatis-->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 
+		<!--mysql-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.29</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
 
 
 	</dependencies>
