--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
-server.port=80
-server.servlet.path=/tech-rc/
+server.port=8080
+server.servlet.context-path=/tech-rc/
+
+spring.datasource.url=jdbc\:mysql\://118.24.116.73\:3306/rczx?useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull  
+spring.datasource.username=root  
+spring.datasource.password=565848
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver  
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource  
+
+# \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
+spring.datasource.initialSize=5    
+spring.datasource.minIdle=5    
+spring.datasource.maxActive=20    
+# \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
+spring.datasource.maxWait=60000    
+
+mybatis.mapper-locations=classpath*:mapping/*Mapper.xml  
