--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,7 @@ spring.datasource.maxActive=20
 # \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
 spring.datasource.maxWait=60000    
 
-mybatis.mapper-locations=classpath*:mapping/*Mapper.xml  
-
-
-
+mybatis.mapper-locations=classpath*:mapping/*Mapper.xml
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
@@ -27,3 +24,27 @@ spring.thymeleaf.mode=HTML5
 # set to false for hot refresh
 # \u5F00\u53D1\u8FC7\u7A0B\u5EFA\u8BAE\u5173\u95ED\u7F13\u5B58
 spring.thymeleaf.cache=false
+
+
+
+####################Redis 配置信息 ##########################
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=118.24.116.73
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+#spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=1000
+#测试redis的缓存日志
+logging.level.net.xqlee.project.demo.shiro.config.shiro.cache=DEBUG
